# xdata-datascientist

./: .gitattributes  .gitignore  pyproject.toml
asr/: .dockerignore  Dockerfile  TDK_subset.csv  asr_api.py  requirements.txt
asr-train/: TRAINING_REPORT.md  download_clips.py  finetune_comparison.csv  get_train_test_split.py  test_finetune.py  ycsep-train-3a.ipynb  ycsep_train_3a.ipynb
asr/api_models/: response.py
asr/decode/: create_tdk_clips.py  download_audio.py  eval_wer_tdk_transcript.py  get_tdk_non_tdk_split.py  ycsep_decode.py
asr/dependencies/: asr_model.py  logger.py
asr/lifespan/: lifespan.py
speaker-detection/: build_podcast_segments.py  detected_timestamps.json  detected_titles.txt  download_podcasts.py  embed_podcast_segments.py  get_best_matches_for_speaker_ref.py  get_unique_podcasts.py  sp-detect-5.ipynb
